--- a/booknow.html
+++ b/booknow.html
@@ -4,33 +4,56 @@
 <head>
     <title>MDT Trucking book now page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--Fonts-->
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <!--Fonts-->
 </head>
 <body>
     <header class="navbar">
-        <nav><ul>
-            <li><a class="navbar" href="Homepage.html"> Home page</a></li>
-            <li><a class="navbar" href="Aboutus.html"> About Us</a></li>
-            <li><a class="navbar" href="services.html"> Services</a></li>
-            <li><a class="navbar" href="Booknow.html"> Book Now!</a></li>
-        </ul>
-        </nav>
-        <p>Hello</p>
-        <img src="images/MDTtrucking logo.png" 
+        <nav>
+            <img class="logo" src="images/MDTtrucking logo.png" 
         width="60px"
         height="60px"
         alt="MDTtrucking Logo">
+            <ul>
+                <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
+                <li><a href="services.html"> Services</a></li>
+                <li><a href="Aboutus.html"> About Us</a></li>
+                <li><a href="Homepage.html"> Home page</a></li>
+            </ul>
+        </nav>      
     </header>
+<h1 class="label2">Book Now!</h1>
 
-<h1>Book Now!</h1>
-<!--Options for services-->
-<!--Calander-->
-<!--Times-->
+<div class="container">
+    <div class="contact-box">
+        <div class="left"></div>
+        <div class="right">
+            <h2 class="contact">Contact Us</h2>
+            <input type="text" class="field" placeholder="Your Name">
+            <input type="email" class="field" placeholder="Your Email">
+            <input tpye="text" class="field" placeholder="Your Phone">
+            <textarea class="field area" placeholder="Message"></textarea>
+            <button class="btn">Send</button>
+           </div>
+           </div>
+           
+            
+
+        </div>
 
 
 
-<footer>
-    <p>Social Medias</p>
-    <a href="https://www.facebook.com/MDTTrucking"><img src="images/MDTtrucking logo.png" alt="Twitterlogo"></a>
+<footer class="footer">
+    <section class="footercontainer">
+    <p class="footeralign">Social Medias</p>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img src="images/Facebook-logo.png" alt="Facebooklogo" width="60em" height="40em"></a>
+    </section>
 </footer>
 </body>
 </html>
