--- a/services.html
+++ b/services.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
@@ -54,19 +57,63 @@ Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
 </section>
 
 <h1 class="label">Our rates</h1>
-<ul class="centered">
-    <li>hghehifeihgfehi</li>
-    <li>feighehig</li>
-    <li>ghwnwhwhfhfje</li>
-</ul>
+<table class="styledtable">
+    <caption>Inside Port McNiell</caption>
+<tr>
+    <td>Hitch</td>
+    <td>$50</td>
+</tr>
+<tr>
+    <td>Truck</td>
+    <td>$100</td>
+</tr>
+<tr>
+    <td>Trailer</td>
+    <td>$200</td>
+</tr>
+</table>
+
+<table class="styledtable">
+    <caption>Campbell River To Port McNiell</caption>
+    <tr>
+        <td>Hitch</td>
+        <td>$150</td>
+    </tr>
+    <tr>
+        <td>Truck</td>
+        <td>$250</td>
+    </tr>
+    <tr>
+        <td>Trailer</td>
+        <td>$400</td>
+    </tr>
+</table>
+
+<table class="styledtable">
+    <caption>South Of Campbell To Port McNiell</caption>
+    <tr>
+        <td>Hitch</td>
+        <td>$300</td>
+    </tr>
+    <tr>
+        <td>Truck</td>
+        <td>$400</td>
+    </tr>
+    <tr>
+        <td>Trailer</td>
+        <td>$600</td>
+    </tr>
+</table>
 <!--Main content-->
 <!--photos of services-->
 <!--Rates-->
 
 
-<footer>
-    <p>Social Medias</p>
-    <a href="https://www.facebook.com/MDTTrucking"><img src="images/twitterlogo.png" alt="Twitterlogo"></a>
+<footer class="footer">
+    <section class="footercontainer">
+    <p class="footeralign">Social Medias</p>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img src="images/Facebook-logo.png" alt="Facebooklogo" width="60em" height="40em"></a>
+    </section>
 </footer>
 </body>
 </html>
