--- a/aboutus.html
+++ b/aboutus.html
@@ -1,20 +1,19 @@
 
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>MDT Trucking About us page</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/MDTtrucking logo.png" 
-        width="60px"
-        height="60pc"
-        alt="MDTtrucking Logo">
+            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">
 
             <ul>
                 <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
@@ -30,20 +29,20 @@
 <h1 class="label2">Get To Know MDTTrucking A Little Better</h1>
 <!--Write a bit about the two owners-->
 <h2 class="label">Dave Tonkin</h2>
-<section class="flexcontainer">
+<div class="flexcontainer">
 <img class="item1" src="images/DaveTonkin.png" alt="DaveTonkin">
 <p class="item2 fontsize">Dave Tonkin is a long time truck driver. And has many years in the industry. He has lived in Port McNiell for many years and is very
 popular in the community. Starting a company like MDT Trucking has been something Dave has wanted to do for a long time!
 And he is very glad and excited to be able to do MDT Trucking with his son Mack!</p>
-</section>
+</div>
 <h2 class="label">Mack Tonkin</h2>
-<section class="flexcontainer2">
+<div class="flexcontainer2">
 <img class="item1" src="images/MackTonkin.png" alt="MackTonkin">
 <p class="item2 fontsize">Mack has lived in Port McNiell almost his whole entire life. And like his dad, has always had an interest in truck driving.
 Mack has had many jobs driving truck in the past. So starting his own hauling company with his dad was a no brainer!
 Growing up in a small town like Port McNiell there wasnt very many job apportunities out side of driving truck, or working in the bush.
 Therefore Mack has been around the buisness of driving truck for most of his life. And he's always know this is what he wants to do!</p>
-</section>
+</div>
 <h2 class="label">Why we started</h2>
 <p class="item2 fontsize">Mack and Dave both started MDT Trucking because they both have a passion for driving truck!
 Its something they both know very well. And love doing</p>
@@ -51,10 +50,10 @@ Its something they both know very well. And love doing</p>
 
 
 <footer class="footer">
-    <section class="footercontainer">
+    <div class="footercontainer">
     <p class="footeralign">Social Medias</p>
-    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img src="images/Facebook-logo.png" alt="Facebooklogo" width="60em" height="40em"></a>
-    </section>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    </div>
 </footer>
 </body>
 </html>
