--- a/booknow.html
+++ b/booknow.html
@@ -1,8 +1,9 @@
 
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>MDT Trucking book now page</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--Fonts-->
@@ -16,10 +17,7 @@
 <body>
     <header class="navbar">
         <nav>
-            <img class="logo" src="images/MDTtrucking logo.png" 
-        width="60px"
-        height="60px"
-        alt="MDTtrucking Logo">
+            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">
             <ul>
                 <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
                 <li><a href="services.html"> Services</a></li>
@@ -31,18 +29,19 @@
 <h1 class="label2">Book Now!</h1>
 
 <div class="container">
+    <form>
     <div class="contact-box">
         <div class="left"></div>
         <div class="right">
             <h2 class="contact">Contact Us</h2>
-            <input type="text" class="field" placeholder="Your Name">
-            <input type="email" class="field" placeholder="Your Email">
-            <input tpye="text" class="field" placeholder="Your Phone">
+            <input type="text" id="fname" class="field" placeholder="Your Name">
+            <input type="email" id="femail" class="field" placeholder="Your Email">
+            <input type="text" id="fphone" class="field" placeholder="Your Phone">
             <textarea class="field area" placeholder="Message"></textarea>
-            <button class="btn">Send</button>
+            <input type="submit" class="btn" value="Send">
            </div>
            </div>
-           
+           </form>
             
 
         </div>
@@ -50,10 +49,10 @@
 
 
 <footer class="footer">
-    <section class="footercontainer">
+    <div class="footercontainer">
     <p class="footeralign">Social Medias</p>
-    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img src="images/Facebook-logo.png" alt="Facebooklogo" width="60em" height="40em"></a>
-    </section>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    </div>
 </footer>
 </body>
 </html>
