--- a/Homepage.html
+++ b/Homepage.html
@@ -1,8 +1,9 @@
 
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>MDT Trucking Home Page</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>                                    <!--Font for header-->
@@ -19,7 +20,7 @@
     <header>  
         
         <nav>
-            <img class="logo" src="Images/MDTtrucking logo.png">
+            <img class="logo" src="Images/MDTtrucking%20logo.png" alt="MDT Trucking's Logo">
             <ul>
                 <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
                 <li><a href="services.html"> Services</a></li>
@@ -39,32 +40,33 @@
 
    
     <h2 class="label">Who we are</h2>
-    <section class=flexcontainer>
-    <img class="item1" src="images/MDTTruckingTailer.png">              
+    <div class=flexcontainer>
+    <img class="item1" src="images/MDTTruckingTailer.png" alt="MDTTrucking using their trailer">
     <P class="item2 fontsize">The two owners of MDT Trucking are <a href="Aboutus.html"> Mack Tonkin</a>, And <a href="Aboutus.html"> Dave Tonkin</a>.
     Driving truck is something both Mack and Dave have plently of experience doing. And have a huge passion for the buisness.</p>
-    </section>
+    </div>
+    
     <h2 class="label">What we do</h2>
-    <section class="flexcontainer2">
-    <img class="item1" src="images/MDTTruckingboat.png">
+    <div class="flexcontainer2">
+    <img class="item1" src="images/MDTTruckingboat.png" alt="MDT Trucking toeing a boat">
     <p class="item2 fontsize">MDT Trucking is a turcking/hauling company based out of lovely Port McNiell BC Canada!
     MDT Trucking is capable of hauling almost anything you need. With our newly aquired <a href="services.html"> trailer</a> and our new truck with a tailer hitch.
     We can move and haul almost anything to almost anywhere.</p>
-    </section>
-    <h2 class="label">With recent success in the company MDT Trucking decided to get a new more dependable truck!<h2>
-        <section class="flexcontainer2">
+    </div>
+    <h2 class="label">With recent success in the company MDT Trucking decided to get a new more dependable truck!</h2>
+        <div class="flexcontainer2">
         <h4 class="label2">Out with the old!</h4>
-        <img src="images/Mdttruckingoldtruck.png">
-    </section>
-        <section class="flexcontainer">
+        <img src="images/Mdttruckingoldtruck.png" alt="MDT Trucking's old truck">
+        </div>
+        <div class="flexcontainer2">
         <h4 class="label2">In with the new!</h4>
-        <img src="images/mdttruckingnew.png">
-        </section>
+        <img src="images/mdttruckingnew.png" alt="MDT Trucking's brand new truck">
+        </div>
     <footer class="footer">
-        <section class="footercontainer">
+        <div class="footercontainer">
         <p class="footeralign">Social Medias</p>
-        <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img src="images/Facebook-logo.png" alt="Facebooklogo" width="60em" height="40em"></a>
-        </section>
+        <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+        </div>
     </footer>
 </body>
 
