--- a/services.html
+++ b/services.html
@@ -1,8 +1,9 @@
 
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <title>MDT Trucking services page</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,14 +11,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header class="navbar">
         <nav>
-            <img class="logo" src="images/MDTtrucking logo.png" 
-        width="60px"
-        height="60px"
-        alt="MDTtrucking Logo">
+            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">
             <ul>
                 <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
                 <li><a href="services.html"> Services</a></li>
@@ -30,31 +29,31 @@
 <!--Nav and header-->
 
 <h1 class="label3">What we offer</h1>
-<section class="flexcontainer">
+<div class="flexcontainer">
 <p class="item2 fontsize">MDT trucking offers various of support for your hauling needs.
 With our new trucks and trailers we can haul almost
 ANYTHING, ANYWHERE</p>
-</section>
+</div>
 
 <h3 class="label">Don't own a truck? Need a truck for your moving needs?</h3>
-<section class="flexcontainer">
-<img class="item1" src="images/mdtruckingnewtruck.png">
+<div class="flexcontainer">
+<img class="item1" src="images/mdtruckingnewtruck.png" alt="MDT Trucking's Truck">
 <p class="item2 fontsize">MDT Truckings new aquired truck may be exaclty what you need!
 Our truck is a new 2020 Chevy duramax diesel dually, which is able to tow to up <b>30,000lbs!</b></p>
-</section>
+</div>
 
 <h3 class="label">Got a camper that needs moving?</h3>
-<section class="flexcontainer2">
-<img class="item1" src="images/MDTTruckingcampers.png">
+<div class="flexcontainer2">
+<img class="item1" src="images/MDTTruckingcampers.png" alt="MDT trucking toeing a camper">
 <p class="item2 fontsize">Our fifth wheel hitch is capable of carrying up to <b>30,000lbs!</b></p>
-</section>
+</div>
 
 <h3 class="label">Big or small, we can haul it all!</h3>
-<section class="flexcontainer">
-<img class="item1" src="images/mdtruckingtailersweight.png">
+<div class="flexcontainer">
+<img class="item1" src="images/mdtruckingtailersweight.png" alt="MDT Trucking trailer toeing metal">
 <p class="item2 fontsize">Our new trailer is capable of packing up to <b>14,000lb</b>
 Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
-</section>
+</div>
 
 <h1 class="label">Our rates</h1>
 <table class="styledtable">
@@ -110,10 +109,10 @@ Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
 
 
 <footer class="footer">
-    <section class="footercontainer">
+    <div class="footercontainer">
     <p class="footeralign">Social Medias</p>
-    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img src="images/Facebook-logo.png" alt="Facebooklogo" width="60em" height="40em"></a>
-    </section>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    </div>
 </footer>
 </body>
 </html>
