--- a/aboutus.html
+++ b/aboutus.html
@@ -7,35 +7,35 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">          <!--Fonts-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">
+            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">           <!--Nav bar Logo-->
 
             <ul>
-                <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
+                <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>                  <!--Nav bar-->
                 <li><a href="services.html"> Services</a></li>
                 <li><a href="Aboutus.html"> About Us</a></li>
-                <li><a href="Homepage.html"> Home page</a></li>
+                <li><a href="index.html"> Home page</a></li>
         </ul>
         </nav>
 
         
     </header>
 
-<h1 class="label2">Get To Know MDTTrucking A Little Better</h1>
+<h1 class="label2">Get To Know MDTTrucking A Little Better</h1>                     <!--Header text-->
 <!--Write a bit about the two owners-->
 <h2 class="label">Dave Tonkin</h2>
-<div class="flexcontainer">
+<div class="flexcontainer">                                                     <!--Photo w/ text about Dave Tonkin-->
 <img class="item1" src="images/DaveTonkin.png" alt="DaveTonkin">
 <p class="item2 fontsize">Dave Tonkin is a long time truck driver. And has many years in the industry. He has lived in Port McNiell for many years and is very
 popular in the community. Starting a company like MDT Trucking has been something Dave has wanted to do for a long time!
 And he is very glad and excited to be able to do MDT Trucking with his son Mack!</p>
 </div>
-<h2 class="label">Mack Tonkin</h2>
+<h2 class="label">Mack Tonkin</h2>                                                              <!--Photo w/ text about Mack Tonkin-->
 <div class="flexcontainer2">
 <img class="item1" src="images/MackTonkin.png" alt="MackTonkin">
 <p class="item2 fontsize">Mack has lived in Port McNiell almost his whole entire life. And like his dad, has always had an interest in truck driving.
@@ -43,16 +43,18 @@ Mack has had many jobs driving truck in the past. So starting his own hauling co
 Growing up in a small town like Port McNiell there wasnt very many job apportunities out side of driving truck, or working in the bush.
 Therefore Mack has been around the buisness of driving truck for most of his life. And he's always know this is what he wants to do!</p>
 </div>
-<h2 class="label">Why we started</h2>
+<h2 class="label">Why we started</h2>                                                                                           <!--Quick text about why they started-->
 <p class="item2 fontsize">Mack and Dave both started MDT Trucking because they both have a passion for driving truck!
 Its something they both know very well. And love doing</p>
 
 
 
 <footer class="footer">
-    <div class="footercontainer">
+    <div class="footercontainer">                                                                   <!--Footer-->
     <p class="footeralign">Social Medias</p>
     <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.”
+    </p>
     </div>
 </footer>
 </body>
