--- a/booknow.html
+++ b/booknow.html
@@ -9,7 +9,7 @@
     <!--Fonts-->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">                                                     <!--Fonts-->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
     <!--Fonts-->
@@ -17,22 +17,22 @@
 <body>
     <header class="navbar">
         <nav>
-            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">
+            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">                                   <!--Logo for nav-->
             <ul>
-                <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
+                <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>                              <!--Nav bar-->
                 <li><a href="services.html"> Services</a></li>
                 <li><a href="Aboutus.html"> About Us</a></li>
-                <li><a href="Homepage.html"> Home page</a></li>
+                <li><a href="index.html"> Home page</a></li>
             </ul>
         </nav>      
     </header>
-<h1 class="label2">Book Now!</h1>
+<h1 class="label2">Book Now!</h1>                                               <!--Book now title-->
 
 <div class="container">
     <form>
     <div class="contact-box">
         <div class="left"></div>
-        <div class="right">
+        <div class="right">                                                                 <!--Contact us form-->
             <h2 class="contact">Contact Us</h2>
             <input type="text" id="fname" class="field" placeholder="Your Name">
             <input type="email" id="femail" class="field" placeholder="Your Email">
@@ -52,6 +52,8 @@
     <div class="footercontainer">
     <p class="footeralign">Social Medias</p>
     <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.”
+    </p>
     </div>
 </footer>
 </body>
