--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>                                            <!--Fonts-->
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,12 +16,12 @@
 <body>
     <header class="navbar">
         <nav>
-            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">
+            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">                                       <!--Logo for nav-->
             <ul>
-                <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>
+                <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>                          <!--Nav bar-->
                 <li><a href="services.html"> Services</a></li>
                 <li><a href="Aboutus.html"> About Us</a></li>
-                <li><a href="Homepage.html"> Home page</a></li>
+                <li><a href="index.html"> Home page</a></li>
             </ul>
         </nav>      
     </header>
@@ -29,35 +29,35 @@
 <!--Nav and header-->
 
 <h1 class="label3">What we offer</h1>
-<div class="flexcontainer">
-<p class="item2 fontsize">MDT trucking offers various of support for your hauling needs.
+<div class="flexcontainer">                                                                     <!--Text about what they offer-->
+<p class="item2 fontsize">MDT trucking offers tons of support for your hauling needs.
 With our new trucks and trailers we can haul almost
 ANYTHING, ANYWHERE</p>
 </div>
 
-<h3 class="label">Don't own a truck? Need a truck for your moving needs?</h3>
+<h3 class="label">Don't own a truck? Need a truck for your moving needs?</h3>                   <!--Photo w/ text about the truck-->
 <div class="flexcontainer">
 <img class="item1" src="images/mdtruckingnewtruck.png" alt="MDT Trucking's Truck">
 <p class="item2 fontsize">MDT Truckings new aquired truck may be exaclty what you need!
 Our truck is a new 2020 Chevy duramax diesel dually, which is able to tow to up <b>30,000lbs!</b></p>
 </div>
 
-<h3 class="label">Got a camper that needs moving?</h3>
+<h3 class="label">Got a camper that needs moving?</h3>                                                  <!--Photo w/ text about the trailer hitch-->
 <div class="flexcontainer2">
 <img class="item1" src="images/MDTTruckingcampers.png" alt="MDT trucking toeing a camper">
 <p class="item2 fontsize">Our fifth wheel hitch is capable of carrying up to <b>30,000lbs!</b></p>
 </div>
 
-<h3 class="label">Big or small, we can haul it all!</h3>
+<h3 class="label">Big or small, we can haul it all!</h3>                                                    <!--Photo w/ text about the trialer-->
 <div class="flexcontainer">
 <img class="item1" src="images/mdtruckingtailersweight.png" alt="MDT Trucking trailer toeing metal">
-<p class="item2 fontsize">Our new trailer is capable of packing up to <b>14,000lb</b>
+<p class="item2 fontsize">Our new trailer is capable of packing up to <b>14,000lb</b>.
 Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
 </div>
 
 <h1 class="label">Our rates</h1>
-<table class="styledtable">
-    <caption>Inside Port McNiell</caption>
+<table class="styledtable">                                                         <!--Table showcasing the rates-->
+    <caption>Inside Port McNeill</caption>
 <tr>
     <td>Hitch</td>
     <td>$50</td>
@@ -73,7 +73,7 @@ Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
 </table>
 
 <table class="styledtable">
-    <caption>Campbell River To Port McNiell</caption>
+    <caption>Campbell River To Port McNeill</caption>
     <tr>
         <td>Hitch</td>
         <td>$150</td>
@@ -89,7 +89,7 @@ Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
 </table>
 
 <table class="styledtable">
-    <caption>South Of Campbell To Port McNiell</caption>
+    <caption>South Of Campbell To Port McNeill</caption>
     <tr>
         <td>Hitch</td>
         <td>$300</td>
@@ -103,15 +103,14 @@ Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
         <td>$600</td>
     </tr>
 </table>
-<!--Main content-->
-<!--photos of services-->
-<!--Rates-->
 
 
 <footer class="footer">
     <div class="footercontainer">
     <p class="footeralign">Social Medias</p>
     <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.”
+    </p>
     </div>
 </footer>
 </body>
