--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2 class="label">Who we are</h2>
     <div class=flexcontainer>
     <img class="item1" src="images/MDTTruckingTailer.png" alt="MDTTrucking using their trailer">                                                            <!--First sections photo w/ text-->
-    <P class="item2 fontsize">The two owners of MDT Trucking are <a href="Aboutus.html"> Mack Tonkin</a>, And <a href="Aboutus.html"> Dave Tonkin</a>.
+    <P class="item2 fontsize">The two owners of MDT Trucking are <a href="Aboutus.html"> Mack Tonkin, And  Dave Tonkin</a>.
     Driving truck is something both Mack and Dave have plently of experience doing. And have a huge passion for the buisness.</p>
     </div>
     
@@ -54,7 +54,7 @@
     <div class="flexcontainer2">
     <img class="item1" src="images/MDTTruckingboat.png" alt="MDT Trucking toeing a boat">                                                                      <!--Second section photo 1/ text-->
     <p class="item2 fontsize">MDT Trucking is a turcking/hauling company based out of lovely Port McNeill BC Canada!
-    MDT Trucking is capable of hauling almost anything you need. With our newly aquired <a href="services.html"> trailer</a> and our new truck with a tailer hitch.
+    MDT Trucking is capable of hauling almost anything you need. With our newly aquired <a  href="services.html"> trailer</a> and our new truck with a tailer hitch.
     We can move and haul almost anything to almost anywhere.</p>
     </div>
     <h2 class="label">With recent success in the company MDT Trucking decided to get a new more dependable truck!</h2>                  <!--Sentence-->
