--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">           <!--Nav bar Logo-->
+            <img class="logo" src="Images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">           <!--Nav bar Logo-->
 
             <ul>
                 <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>                  <!--Nav bar-->
@@ -30,14 +30,14 @@
 <!--Write a bit about the two owners-->
 <h2 class="label">Dave Tonkin</h2>
 <div class="flexcontainer">                                                     <!--Photo w/ text about Dave Tonkin-->
-<img class="item1" src="images/DaveTonkin.png" alt="DaveTonkin">
+<img class="item1" src="Images/DaveTonkin.png" alt="DaveTonkin">
 <p class="item2 fontsize">Dave Tonkin is a long time truck driver. And has many years in the industry. He has lived in Port McNiell for many years and is very
 popular in the community. Starting a company like MDT Trucking has been something Dave has wanted to do for a long time!
 And he is very glad and excited to be able to do MDT Trucking with his son Mack!</p>
 </div>
 <h2 class="label">Mack Tonkin</h2>                                                              <!--Photo w/ text about Mack Tonkin-->
 <div class="flexcontainer2">
-<img class="item1" src="images/MackTonkin.png" alt="MackTonkin">
+<img class="item1" src="Images/MackTonkin.png" alt="MackTonkin">
 <p class="item2 fontsize">Mack has lived in Port McNiell almost his whole entire life. And like his dad, has always had an interest in truck driving.
 Mack has had many jobs driving truck in the past. So starting his own hauling company with his dad was a no brainer!
 Growing up in a small town like Port McNiell there wasnt very many job apportunities out side of driving truck, or working in the bush.
@@ -52,7 +52,7 @@ Its something they both know very well. And love doing</p>
 <footer class="footer">
     <div class="footercontainer">                                                                   <!--Footer-->
     <p class="footeralign">Social Medias</p>
-    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="Images/Facebook-logo.png" alt="Facebooklogo"></a>
     <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.”
     </p>
     </div>
