--- a/booknow.html
+++ b/booknow.html
@@ -17,7 +17,7 @@
 <body>
     <header class="navbar">
         <nav>
-            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">                                   <!--Logo for nav-->
+            <img class="logo" src="Images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">                                   <!--Logo for nav-->
             <ul>
                 <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>                              <!--Nav bar-->
                 <li><a href="services.html"> Services</a></li>
@@ -51,7 +51,7 @@
 <footer class="footer">
     <div class="footercontainer">
     <p class="footeralign">Social Medias</p>
-    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="Images/Facebook-logo.png" alt="Facebooklogo"></a>
     <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.”
     </p>
     </div>
