--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
    
     <h2 class="label">Who we are</h2>
     <div class=flexcontainer>
-    <img class="item1" src="images/MDTTruckingTailer.png" alt="MDTTrucking using their trailer">                                                            <!--First sections photo w/ text-->
+    <img class="item1" src="Images/MDTTruckingTailer.png" alt="MDTTrucking using their trailer">                                                            <!--First sections photo w/ text-->
     <P class="item2 fontsize">The two owners of MDT Trucking are <a href="Aboutus.html"> Mack Tonkin, And  Dave Tonkin</a>.
     Driving truck is something both Mack and Dave have plently of experience doing. And have a huge passion for the buisness.</p>
     </div>
     
     <h2 class="label">What we do</h2>
     <div class="flexcontainer2">
-    <img class="item1" src="images/MDTTruckingboat.png" alt="MDT Trucking toeing a boat">                                                                      <!--Second section photo 1/ text-->
+    <img class="item1" src="Images/MDTTruckingboat.png" alt="MDT Trucking toeing a boat">                                                                      <!--Second section photo 1/ text-->
     <p class="item2 fontsize">MDT Trucking is a turcking/hauling company based out of lovely Port McNeill BC Canada!
     MDT Trucking is capable of hauling almost anything you need. With our newly aquired <a  href="services.html"> trailer</a> and our new truck with a tailer hitch.
     We can move and haul almost anything to almost anywhere.</p>
@@ -60,16 +60,16 @@
     <h2 class="label">With recent success in the company MDT Trucking decided to get a new more dependable truck!</h2>                  <!--Sentence-->
         <div class="flexcontainer2">                                                                                                    <!--Photo w/ text old truck-->
         <h4 class="label2">Out with the old!</h4>
-        <img src="images/Mdttruckingoldtruck.png" alt="MDT Trucking's old truck">
+        <img src="Images/Mdttruckingoldtruck.png" alt="MDT Trucking's old truck">
         </div>
         <div class="flexcontainer2">                                                                                                    <!--Photo w/ text new truck-->
         <h4 class="label2">In with the new!</h4>
-        <img src="images/mdttruckingnew.png" alt="MDT Trucking's brand new truck">
+        <img src="Images/mdttruckingnew.png" alt="MDT Trucking's brand new truck">
         </div>
     <footer class="footer">
         <div class="footercontainer">                                                                                                   <!--Footer-->
         <p class="footeralign">Social Medias</p>
-        <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+        <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="Images/Facebook-logo.png" alt="Facebooklogo"></a>
         <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.”
         </p>
         </div>
