--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 <body>
     <header class="navbar">
         <nav>
-            <img class="logo" src="images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">                                       <!--Logo for nav-->
+            <img class="logo" src="Images/MDTtrucking%20logo.png" alt="MDTtrucking Logo">                                       <!--Logo for nav-->
             <ul>
                 <li><a class="booknow" href="Booknow.html"> Book Now!</a></li>                          <!--Nav bar-->
                 <li><a href="services.html"> Services</a></li>
@@ -37,20 +37,20 @@ ANYTHING, ANYWHERE</p>
 
 <h3 class="label">Don't own a truck? Need a truck for your moving needs?</h3>                   <!--Photo w/ text about the truck-->
 <div class="flexcontainer">
-<img class="item1" src="images/mdtruckingnewtruck.png" alt="MDT Trucking's Truck">
+<img class="item1" src="Images/mdtruckingnewtruck.png" alt="MDT Trucking's Truck">
 <p class="item2 fontsize">MDT Truckings new aquired truck may be exaclty what you need!
 Our truck is a new 2020 Chevy duramax diesel dually, which is able to tow to up <b>30,000lbs!</b></p>
 </div>
 
 <h3 class="label">Got a camper that needs moving?</h3>                                                  <!--Photo w/ text about the trailer hitch-->
 <div class="flexcontainer2">
-<img class="item1" src="images/MDTTruckingcampers.png" alt="MDT trucking toeing a camper">
+<img class="item1" src="Images/MDTTruckingcampers.png" alt="MDT trucking toeing a camper">
 <p class="item2 fontsize">Our fifth wheel hitch is capable of carrying up to <b>30,000lbs!</b></p>
 </div>
 
 <h3 class="label">Big or small, we can haul it all!</h3>                                                    <!--Photo w/ text about the trialer-->
 <div class="flexcontainer">
-<img class="item1" src="images/mdtruckingtailersweight.png" alt="MDT Trucking trailer toeing metal">
+<img class="item1" src="Images/mdtruckingtailersweight.png" alt="MDT Trucking trailer toeing metal">
 <p class="item2 fontsize">Our new trailer is capable of packing up to <b>14,000lb</b>.
 Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
 </div>
@@ -108,7 +108,7 @@ Our trailer is a 2021 deck over tuff, with hidden ramps!</p>
 <footer class="footer">
     <div class="footercontainer">
     <p class="footeralign">Social Medias</p>
-    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="images/Facebook-logo.png" alt="Facebooklogo"></a>
+    <a class="footerphoto" href="https://www.facebook.com/MDTTrucking"><img class="footerlogo" src="Images/Facebook-logo.png" alt="Facebooklogo"></a>
     <p>“This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.”
     </p>
     </div>
